--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "Estella",
-  "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
-  "keywords": [
-    "telegram",
-    "best",
-    "group",
-    "manager",
-    "Estella"
-  ],
-  "repository": "hhttps://github.com/MrHonekawa/Estella",
-  "env": {
+      "name": "Estella",
+      "description": "An Anime themed Telegram group management bot.",
+      "keywords": [
+         "telegram",
+         "anime",
+         "group",
+         "manager",
+         "Estella"
+      ],   
+   "repository": "https://github.com/MrHonekawa/Estella",
+    "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
       "value": "ANYTHING"
@@ -32,11 +32,11 @@
     },
     "URL": {
       "description": "The Heroku App URL similar to https://<appname>.herokuapp.com/",
-      "value": "https://appname.herokuapp.com"
+      "value": "https://appname.herokuapp.com/"
     },
     "MESSAGE_DUMP": {
       "description": "optional: a chat where your replied saved messages are stored, to stop people deleting their old",
-      "value": "-1007777777777"
+      "value": "-1001247050762"
     },
     "SUDO_USERS": {
       "description": "A space separated list of user_ids which should be considered sudo users",
@@ -84,8 +84,3 @@
     }
   ]
 }
-# make sure the regex handler can take extra kwargs
-tg.RegexHandler = CustomRegexHandler
-
-if ALLOW_EXCL:
-    tg.CommandHandler = CustomCommandHandler
