--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,19 @@
 future
 emoji
-lxml
-beautifulsoup4
 requests
 sqlalchemy
-python-telegram-bot==12.8
+python-telegram-bot==11.1.0
 psycopg2-binary
 feedparser
+pyowm
+bs4
+lxml
+demjson
+PyLyrics
+wget
+gTTS
+#telegram
+zalgo_text
 pynewtonmath
-pyrogram>=1.0.7
-tgCrypto>=1.2.2
-spongemock
-zalgo-text
-geopy
-nltk
-psutil
-aiohttp>=2.2.5
-Pillow>=4.2.0
-CurrencyConverter
-googletrans
-jikanpy
-speedtest-cli
-cachetools
-coffeehouse
-google_trans_new
-regex
-bleach
-git+https://github.com/starry69/python-markdown2.git
-wikipedia
-telethon==1.16.4
-fontTools
-spamwatch
-alphabet_detector
-pyrate-limiter
-gtts
+bs4
+telegraph
